# 22202-e.brilkova-oop

task-0/lab0b/: CMakeLists.txt  Parser.cpp  Parser.h  ReadFile.cpp  ReadFile.h  WordMap.cpp  WordMap.h  WriteFile.cpp  WriteFile.h  lab0b.cpp  main.cpp  test  test0b.cpp  test1.csv  test1.txt
task-0/lab0b/tests/: ParserTest.cpp  ReadFileTest.cpp  WordMapTest.cpp  WriteFileTest.cpp
task-1/src/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h
task-1/src/tests/: AddressTest.cpp  CapacityTest.cpp  ConstructorTest.cpp  EraseTest.cpp  InsertTest.cpp  PopTest.cpp  PushTest.cpp  RotateTest.cpp
task-2/: CMakeLists.txt
task-2/files_for_game/: crash.lif  default.lif
task-2/src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  Reader.cpp  Reader.h  Universe.cpp  Universe.h  Writer.cpp  Writer.h  main.cpp
task-2/test_files/: correct.lif  empty_rule.lif  invalid_coords1.lif  invalid_coords2.lif  invalid_coords3.lif  invalid_coords4.lif  invalid_format.lif  invalid_rule.lif  no_birth.lif  no_coords.lif  no_name.lif  no_survival.lif  only_coords.lif
task-2/tests/: ReaderTest.cpp  UniverseTest.cpp
